--- a/index.html
+++ b/index.html
@@ -1,5 +1,30 @@
-<title>This is the title of the documnet</title>
-<p>
-  lalalalalalal~
-  </p>
-<a href="https://googole.com">구글에 가봐</a>
+<!doctype html>
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="PKB"
+    <meta name="discription" content="Welcom to my kakao Clone"
+    <title>Box Model</title>
+    <style>
+    .box{
+      background-color: red;
+      position:fixed;
+      width:200px;
+      height:200px;
+      border: 1px solid black;
+      bottom: 0;
+    }
+    .box2{
+      background-color: red;
+      position: relative;
+      width:10000px;
+    }
+    </style>
+  </head>
+  <body>
+    <div class="box">2</div>
+    <div class="box2">1</div>
+  </body>
+
+</html>
